force-app/main/default/objects/Daily_Production_Update__c/Daily_Production_Update__c.object-meta.xml
<CustomObject>
    <description>Records are created on a daily basis through an API with RadianGen. These values are not always 100% certain due to potential data malfunction.</description>
    <label>Daily Production Update</label>
    <nameField>
        <label>Daily Production Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Production Updates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>