force-app/main/default/objects/Daily_Production_Update__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>If( month( Date__c ) == 1, &quot;January&quot;, 
if( month( Date__c ) == 2, &quot;February&quot;, 
if( month( Date__c ) == 3, &quot;March&quot;, 
if( month( Date__c ) == 4, &quot;April&quot;, 
if( month( Date__c ) == 5, &quot;May&quot;, 
if( month( Date__c ) == 6, &quot;June&quot;, 
if( month( Date__c ) == 7, &quot;July&quot;, 
if( month( Date__c ) == 8, &quot;August&quot;, 
if( month( Date__c ) == 9, &quot;September&quot;, 
if( month( Date__c ) == 10, &quot;October&quot;, 
if( month( Date__c ) == 11, &quot;November&quot;, 
if( month( Date__c ) == 12, &quot;December&quot;, null))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>