force-app/main/default/objects/Daily_Production_Update__c/fields/Production_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Production_kW_DC__c</fullName>
    <label>Production (kW DC)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>