force-app/main/default/objects/Daily_Production_Update__c/fields/Shared_Solar_System__c.field-meta.xml
<CustomField>
    <fullName>Shared_Solar_System__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shared Solar System</label>
    <referenceTo>Shared_Solar_System__c</referenceTo>
    <relationshipLabel>Daily Production Updates</relationshipLabel>
    <relationshipName>Daily_Production_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>