force-app/main/default/objects/Daily_Production_Update__c/fields/Total_System_Capacity_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Capacity_kW_DC__c</fullName>
    <formula>Shared_Solar_System__r.Total_System_Size_kWh_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System Capacity (kW DC)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>